# alphaevolve-trading

./: .env.example  .gitignore  README.md  alphaevolve_evaluation.md  pyproject.toml
alphaevolve/: __init__.py  config.py  default_config.yaml  engine.py
alphaevolve/evaluator/: backtest.py  loader.py  metrics.py
alphaevolve/evolution/: controller.py  patching.py  prompt_ga.py
alphaevolve/llm_engine/: __init__.py  base_client.py  local_client.py  openai_client.py  prompts.py
alphaevolve/store/: prompt_sqlite.py  sqlite.py
alphaevolve/strategies/: base.py
darwin/: README.md  Untitled.ipynb  alphaevolve_for_trading_plan.md  backtest.ipynb  codex.md  dspy_integration_plan.md  implementation_plan.md  pyproject.toml
darwin/.cloudbuild/: deploy-to-prod.yaml  pr_checks.yaml  staging.yaml
darwin/app/: agent.py  agent_engine_app.py
darwin/app/data/: catalog.py
darwin/app/data/bar/BTCUSD.SIM-1-MINUTE-LAST-INTERNAL/: 2012-01-01T10-01-00-000000000Z_2012-01-08T08-40-00-000000000Z.parquet
darwin/app/data/catalog/data/bar/BTCUSD.SIM-1-MINUTE-LAST-INTERNAL/: 2012-01-01T10-01-00-000000000Z_2012-01-02T02-40-00-000000000Z.parquet
darwin/app/data/catalog/data/bar/BTCUSD.TEST-1-MINUTE-LAST-INTERNAL/: 2012-01-01T10-01-00-000000000Z_2012-01-02T02-40-00-000000000Z.parquet
darwin/app/data/catalog/data/currency_pair/BTCUSD.SIM/: 1970-01-01T00-00-00-000000000Z_1970-01-01T00-00-00-000000000Z.parquet
darwin/app/data/catalog/data/currency_pair/BTCUSD.TEST/: 1970-01-01T00-00-00-000000000Z_1970-01-01T00-00-00-000000000Z.parquet
darwin/app/evaluators/: btc-1m-basic.py
darwin/app/strategies/: basic.py
darwin/app/utils/: gcs.py  tracing.py  typing.py
darwin/client/: package-lock.json  package.json
darwin/client/app/: globals.css  layout.tsx  page.tsx
darwin/client/app/components/: PerformanceChart.tsx  ThemeToggle.tsx  TradingViewChart.tsx
darwin/client/app/components/views/: EvolveView.tsx  PortfolioView.tsx
darwin/deployment/terraform/: variables.tf
darwin/deployment/terraform/dev/: variables.tf
darwin/deployment/terraform/dev/vars/: env.tfvars
darwin/deployment/terraform/vars/: env.tfvars
darwin/tests/: sample_backtest.py
examples/: config.py  sma_momentum.py  vol_adj_momentum.py
scripts/: gui.py  run_example.py
tests/: test_controller.py  test_dataset.py  test_engine.py  test_metrics.py  test_patching.py  test_prompt_ga.py  test_store.py
